<resources>
    <string name="app_name">ConstraintsLayout</string>


    <string name="NEXT">NEXT</string>
    <string name="SKIP">SKIP</string>
    <string name="DONE">DONE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_my_claims">MY CLAIMS</string>
    <string name="title_my_policy">MY POLICY</string>
    <string name="title_stay_active">STAY ACTIVE</string>
    <string name="title_more">MORE</string>


</resources>
